# rosauth

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README  README.md  mainpage.dox  manifest.xml  package.xml  stack.xml
src/: ros_hash_authentication.cpp  ros_mac_authentication.cpp
srv/: Authentication.srv
test/: ros_hash_authentication.test  ros_hash_authentication_test.cpp  ros_mac_authentication.test  ros_mac_authentication_test.cpp  ros_mac_authentication_test.py.in  secret.yaml.in
