<?xml version="1.0"?>
<package format="2">
  <name>rosauth</name>
  <version>1.0.1</version>
  <description>Server Side tools for Authorization and Authentication of ROS Clients</description>

  <maintainer email="rein@eurotec.com">Rein Appeldoorn</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosauth</url>
  <url type="bugtracker">https://github.com/GT-RAIL/rosauth/issues</url>
  <url type="repository">https://github.com/GT-RAIL/rosauth</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>rostest</test_depend>
</package>
