<?xml version="1.0"?>
<package format="3">
  <name>rosauth</name>
  <version>2.0.1</version>
  <description>Server Side tools for Authorization and Authentication of ROS Clients</description>

  <maintainer email="rein@eurotec.com">Rein Appeldoorn</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosauth</url>
  <url type="bugtracker">https://github.com/GT-RAIL/rosauth/issues</url>
  <url type="repository">https://github.com/GT-RAIL/rosauth</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
